# burnbook

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
burnbook/: __init__.py  analyzer.py  cli.py  formatters.py  roaster.py
burnbook/rules/: __init__.py  common_rules.py  go_rules.py  java_rules.py  javascript_rules.py  python_rules.py  rust_rules.py
cybrlint/: __init__.py  analyzer.py  cli.py  formatters.py  roaster.py
cybrlint/rules/: __init__.py  common_rules.py  go_rules.py  java_rules.py  javascript_rules.py  python_rules.py  rust_rules.py
examples/: README.md  bad_javascript.js  bad_python.py  good_python.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_formatters.py  test_rules.py
