[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burnbook"
version = "1.0.0"
description = "The code quality roaster that tells it like it is. Your code's honest friend (that no one asked for)."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "BurnBook Contributors" }
]
keywords = ["code", "quality", "linter", "roast", "cli", "analysis", "funny"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
  "click>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/burnbook/burnbook"
Repository = "https://github.com/burnbook/burnbook"
"Bug Tracker" = "https://github.com/burnbook/burnbook/issues"

[project.scripts]
burnbook = "burnbook.cli:main"

[tool.setuptools.packages.find]
include = ["burnbook*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
